# dbx_finance

./: .gitignore  README.md  databricks.yml  project_handbook.md  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py
dbt/: dbt_project.yml  profiles.yml.example
dbt/models/bronze/: stock_prices.sql
jobs/: main.py
resources/: dbx_finance.job.yml  dbx_finance.pipeline.yml
src/: dlt_pipeline.ipynb  ingest.py  notebook.ipynb  pipeline.py
tests/: main_test.py
